src/objects/MRILeasingAssociate__c.object
<CustomObject>
    <description>MRI leasing associates</description>
    <fields>
        <fullName>IsLeasingAssociateActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Leasing Associate Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeasingAssociateID__c</fullName>
        <description>Leasing Associate MRI User ID</description>
        <externalId>true</externalId>
        <label>Leasing Associate ID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LeasingAssociateName__c</fullName>
        <label>Leasing Associate Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeasingAssociatePrimaryCommunity__c</fullName>
        <label>Leasing Associate Primary Community</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesforceUserAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce User Account</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MRILeasingAssociates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MRI Leasing Associate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>LeasingAssociateName__c</columns>
        <columns>LeasingAssociatePrimaryCommunity__c</columns>
        <columns>IsLeasingAssociateActive__c</columns>
        <columns>SalesforceUserAccount__c</columns>
        <columns>NAME</columns>
        <columns>LeasingAssociateID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CA_Associates</fullName>
        <columns>LeasingAssociatePrimaryCommunity__c</columns>
        <columns>LeasingAssociateName__c</columns>
        <columns>SalesforceUserAccount__c</columns>
        <columns>NAME</columns>
        <columns>IsLeasingAssociateActive__c</columns>
        <columns>LeasingAssociateID__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LeasingAssociatePrimaryCommunity__c</field>
            <operation>startsWith</operation>
            <value>ca</value>
        </filters>
        <filters>
            <field>IsLeasingAssociateActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>CA Associates</label>
    </listViews>
    <listViews>
        <fullName>CT_Associates</fullName>
        <booleanFilter>(1 or 2) and 3</booleanFilter>
        <columns>LeasingAssociatePrimaryCommunity__c</columns>
        <columns>LeasingAssociateName__c</columns>
        <columns>SalesforceUserAccount__c</columns>
        <columns>NAME</columns>
        <columns>IsLeasingAssociateActive__c</columns>
        <columns>LeasingAssociateID__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LeasingAssociatePrimaryCommunity__c</field>
            <operation>startsWith</operation>
            <value>ct</value>
        </filters>
        <filters>
            <field>LeasingAssociatePrimaryCommunity__c</field>
            <operation>startsWith</operation>
            <value>ri</value>
        </filters>
        <filters>
            <field>IsLeasingAssociateActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>CT Associates (including RI)</label>
    </listViews>
    <listViews>
        <fullName>Floating_Associates</fullName>
        <columns>LeasingAssociateName__c</columns>
        <columns>SalesforceUserAccount__c</columns>
        <columns>NAME</columns>
        <columns>IsLeasingAssociateActive__c</columns>
        <columns>LeasingAssociateID__c</columns>
        <columns>LeasingAssociatePrimaryCommunity__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LeasingAssociatePrimaryCommunity__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>IsLeasingAssociateActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Floating Associates</label>
    </listViews>
    <listViews>
        <fullName>Inactive_with_accounts</fullName>
        <columns>LeasingAssociatePrimaryCommunity__c</columns>
        <columns>LeasingAssociateName__c</columns>
        <columns>SalesforceUserAccount__c</columns>
        <columns>NAME</columns>
        <columns>LeasingAssociateID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsLeasingAssociateActive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>SalesforceUserAccount__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Inactive Users with accounts</label>
    </listViews>
    <listViews>
        <fullName>MA_Associates</fullName>
        <columns>LeasingAssociatePrimaryCommunity__c</columns>
        <columns>LeasingAssociateName__c</columns>
        <columns>SalesforceUserAccount__c</columns>
        <columns>NAME</columns>
        <columns>IsLeasingAssociateActive__c</columns>
        <columns>LeasingAssociateID__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LeasingAssociatePrimaryCommunity__c</field>
            <operation>startsWith</operation>
            <value>ma</value>
        </filters>
        <filters>
            <field>IsLeasingAssociateActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>MA Associates</label>
    </listViews>
    <listViews>
        <fullName>MD_Associates</fullName>
        <columns>LeasingAssociatePrimaryCommunity__c</columns>
        <columns>LeasingAssociateName__c</columns>
        <columns>SalesforceUserAccount__c</columns>
        <columns>NAME</columns>
        <columns>IsLeasingAssociateActive__c</columns>
        <columns>LeasingAssociateID__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LeasingAssociatePrimaryCommunity__c</field>
            <operation>startsWith</operation>
            <value>md</value>
        </filters>
        <filters>
            <field>IsLeasingAssociateActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>MD Associates</label>
    </listViews>
    <listViews>
        <fullName>NJ_Associates</fullName>
        <columns>LeasingAssociatePrimaryCommunity__c</columns>
        <columns>LeasingAssociateName__c</columns>
        <columns>SalesforceUserAccount__c</columns>
        <columns>NAME</columns>
        <columns>IsLeasingAssociateActive__c</columns>
        <columns>LeasingAssociateID__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LeasingAssociatePrimaryCommunity__c</field>
            <operation>startsWith</operation>
            <value>nj</value>
        </filters>
        <filters>
            <field>IsLeasingAssociateActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>NJ Associates</label>
    </listViews>
    <listViews>
        <fullName>NY_Associates</fullName>
        <columns>LeasingAssociatePrimaryCommunity__c</columns>
        <columns>LeasingAssociateName__c</columns>
        <columns>SalesforceUserAccount__c</columns>
        <columns>NAME</columns>
        <columns>IsLeasingAssociateActive__c</columns>
        <columns>LeasingAssociateID__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LeasingAssociatePrimaryCommunity__c</field>
            <operation>startsWith</operation>
            <value>ny</value>
        </filters>
        <filters>
            <field>IsLeasingAssociateActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>NY Associates</label>
    </listViews>
    <listViews>
        <fullName>VA_Associates</fullName>
        <columns>LeasingAssociatePrimaryCommunity__c</columns>
        <columns>LeasingAssociateName__c</columns>
        <columns>SalesforceUserAccount__c</columns>
        <columns>NAME</columns>
        <columns>IsLeasingAssociateActive__c</columns>
        <columns>LeasingAssociateID__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LeasingAssociatePrimaryCommunity__c</field>
            <operation>startsWith</operation>
            <value>va</value>
        </filters>
        <filters>
            <field>IsLeasingAssociateActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>VA Associates</label>
    </listViews>
    <listViews>
        <fullName>WA_Associates</fullName>
        <columns>LeasingAssociatePrimaryCommunity__c</columns>
        <columns>LeasingAssociateName__c</columns>
        <columns>SalesforceUserAccount__c</columns>
        <columns>NAME</columns>
        <columns>IsLeasingAssociateActive__c</columns>
        <columns>LeasingAssociateID__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LeasingAssociatePrimaryCommunity__c</field>
            <operation>startsWith</operation>
            <value>wa</value>
        </filters>
        <filters>
            <field>IsLeasingAssociateActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>WA Associates</label>
    </listViews>
    <nameField>
        <label>MRI Leasing Associate ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MRI Leasing Associates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>